--- a/cluster/releases/podinfo.yaml
+++ b/cluster/releases/podinfo.yaml
@@ -5,13 +5,11 @@ metadata:
   name: podinfo
   namespace: prod
   annotations:
-    fluxcd.io/ignore: "true"
-    fluxcd.io/automated: "false"
-    fluxcd.io/tag.chart-image: semver:~3.0
+    fluxcd.io/ignore: "false"
 spec:
   releaseName: podinfo
   chart:
-    git: git@github.com:stefanprodan/gitops-helm-workshop
+    git: git@github.com:bigfleet/gitops-helm-workshop
     ref: master
     path: cluster/charts/podinfo
   values:
@@ -31,4 +29,4 @@ spec:
           proxy_hide_header l5d-server-id;
       path: /
       hosts:
-      - 35.198.97.122.nip.io
+      - aa6109bd1db3d4e289791980e6d2c878-1444537765.us-west-2.elb.amazonaws.com
